Refactoring: warnings (Java 9 deprecated uses, static methods, etc.)