@@ -172,7 +172,7 @@ public class ChartColorAttributeEditor extends AbstractValueEditComponent {
 						colButton.setText(EMPTY_STRING);
 					addDefaultColorActionListenerAndAddBarInfo(colButton, true, cca.getIdList(barCount).get(i));
 					colButton.putClientProperty("isBar", new Boolean(true));
-					colButton.putClientProperty("barIndex", new Integer(i));
+					colButton.putClientProperty("barIndex", Integer.valueOf(i));
 					colButton.setToolTipText("Line/Bar-Color: " + cca.getIdList(barCount).get(i) + ": "
 							+ AttributeHelper.getColorName(barCols.get(i)));
 
@@ -188,7 +188,7 @@ public class ChartColorAttributeEditor extends AbstractValueEditComponent {
 
 					addDefaultColorActionListenerAndAddBarInfo(colButtonOutline, false, cca.getIdList(barCount).get(i));
 					colButtonOutline.putClientProperty("isBar", new Boolean(false));
-					colButtonOutline.putClientProperty("barIndex", new Integer(i));
+					colButtonOutline.putClientProperty("barIndex", Integer.valueOf(i));
 					jpanel.add(colButton, i + ",0");
 
 					jpanel.add(colButtonOutline, i + ",1");
