@@ -82,7 +82,7 @@ public class CreateDirectChildrenClustersHistogramAlgorithm extends AbstractAlgo
 		Collection<Node> workNodes = nh.getNeighbors();
 		TreeMap<String, Integer> cluster2frequency = new TreeMap<String, Integer>();
 		for (String ci : knownClusterIDs)
-			cluster2frequency.put(ci, new Integer(0));
+			cluster2frequency.put(ci, Integer.valueOf(0));
 
 		for (Node n : workNodes) {
 			NodeHelper nnh = new NodeHelper(n);
@@ -91,8 +91,8 @@ public class CreateDirectChildrenClustersHistogramAlgorithm extends AbstractAlgo
 				if (clusterID != null) {
 					Integer value = cluster2frequency.get(clusterID);
 					if (value == null)
-						value = new Integer(0);
-					cluster2frequency.put(clusterID, new Integer(value + 1));
+						value = Integer.valueOf(0);
+					cluster2frequency.put(clusterID, Integer.valueOf(value + 1));
 				}
 			}
 		}
@@ -105,9 +105,9 @@ public class CreateDirectChildrenClustersHistogramAlgorithm extends AbstractAlgo
 			int plantID = nh.memGetPlantID(clusterID, "", "", "", "");
 			Integer value = cluster2frequency.get(clusterID);
 			if (value == null)
-				nh.memSample(new Double(0), -1, plantID, "frequency", "-1", new Integer(-1));
+				nh.memSample(new Double(0), -1, plantID, "frequency", "-1", Integer.valueOf(-1));
 			else
-				nh.memSample(new Double(value), -1, plantID, "frequency", "-1", new Integer(-1));
+				nh.memSample(new Double(value), -1, plantID, "frequency", "-1", Integer.valueOf(-1));
 		}
 		nh.memAddDataMapping(substanceName, "cluster frequency", null, "calculated analysis", "system",
 				"Frequency of clusters in neighbour nodes", "");
